--- a/lala.ipynb
+++ b/lala.ipynb
@@ -17,9 +17,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hejsa\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hello():\n",
+    "    print(\"hejsa\")\n",
+    "    \n",
+    "hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
@@ -28,9 +50,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
