--- a/lala.ipynb
+++ b/lala.ipynb
@@ -5,8 +5,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2016-10-26T13:33:08.384478",
-     "start_time": "2016-10-26T13:33:08.381937"
+     "end_time": "2016-10-26T13:41:33.894340",
+     "start_time": "2016-10-26T13:41:33.891698"
     },
     "collapsed": false
    },
@@ -17,19 +17,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2016-10-26T13:41:34.085073",
+     "start_time": "2016-10-26T13:41:34.081549"
+    },
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hejsa\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def hello():\n",
     "    print(\"hejsa\")\n",
@@ -41,7 +37,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -50,9 +46,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
