Finding users & commits in releases

--- a/SDM.ipynb
+++ b/SDM.ipynb
@@ -40,14 +40,20 @@
    "source": [
     "releaseCommits = releaseInfo.get('commits')\n",
     "nodes = []\n",
-    "weights = []\n",
+    "weights = {}\n",
     "for node in releaseCommits:\n",
+    "    \n",
     "    author = node.get('author')\n",
+    "    \n",
     "    if (author is not None):\n",
     "        username = author.get('login')\n",
     "        nodes.append(username)\n",
+    "        if username in weights is not None:\n",
+    "            weights[username] = weights[username]+1\n",
+    "        else:\n",
+    "            weights[username] = 1\n",
     "        \n",
-    "nodes"
+    "weights"
    ]
   },
   {
