--- a/SDM.ipynb
+++ b/SDM.ipynb
@@ -11,7 +11,7 @@
     "import requests\n",
     "\n",
     "maxElements = 100\n",
-    "r = requests.get('https://api.github.com/repos/PhilJay/MPAndroidChart/releases?page=1&per_page='+maxElements)\n",
+    "r = requests.get('https://api.github.com/repos/PhilJay/MPAndroidChart/releases?page=1&per_page='+str(maxElements)\n",
     "rlist = r.json()\n",
     "rlist"
    ]
