--- a/SDM.ipynb
+++ b/SDM.ipynb
@@ -8,10 +8,41 @@
    },
    "outputs": [],
    "source": [
-    "import requests\n",
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rate limit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "requestRateLimit = requests.get('https://api.github.com/rate_limit')\n",
+    "rInfo = requestRateLimit.json()\n",
+    "print(rInfo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "maxElements = 100\n",
-    "r = requests.get('https://api.github.com/repos/PhilJay/MPAndroidChart/releases?page=1&per_page='+str(maxElements)\n",
+    "r = requests.get('https://api.github.com/repos/PhilJay/MPAndroidChart/releases?page=1&per_page='+str(maxElements))\n",
     "rlist = r.json()\n",
     "rlist"
    ]
@@ -38,22 +69,46 @@
    },
    "outputs": [],
    "source": [
-    "releaseCommits = releaseInfo.get('commits')\n",
-    "nodes = []\n",
+    "\n",
+    "#nodes = []\n",
     "weights = {}\n",
-    "for node in releaseCommits:\n",
+    "\n",
+    "nodesweightsrelease = {}\n",
+    "\n",
+    "for release in rlist:\n",
     "    \n",
-    "    author = node.get('author')\n",
     "    \n",
-    "    if (author is not None):\n",
-    "        username = author.get('login')\n",
-    "        nodes.append(username)\n",
-    "        if username in weights is not None:\n",
-    "            weights[username] = weights[username]+1\n",
-    "        else:\n",
-    "            weights[username] = 1\n",
+    "    tag = release.get('tag_name')\n",
+    "    \n",
+    "    request = requests.get('https://api.github.com/repos/PhilJay/MPAndroidChart/compare/'+tag+'...master')\n",
+    "    releaseInfo = request.json()\n",
+    "    \n",
+    "    releaseCommits = releaseInfo.get('commits')\n",
+    "    \n",
+    "    for node in releaseCommits:\n",
     "        \n",
-    "weights"
+    "        author = node.get('author')\n",
+    "\n",
+    "        if (author is not None):\n",
+    "            username = author.get('login')\n",
+    "            #nodes.append(username)\n",
+    "            if username in weights is not None:\n",
+    "                weights[username] = weights[username]+1\n",
+    "            else:\n",
+    "                weights[username] = 1\n",
+    "    nodesweightsrelease[tag] = weights\n",
+    "    weights.clear()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "nodesweightsrelease"
    ]
   },
   {
