added github access_token

--- a/SDM.ipynb
+++ b/SDM.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "\n",
     "maxElements = 100\n",
-    "r = requests.get('https://api.github.com/repos/PhilJay/MPAndroidChart/releases?page=1&per_page='+str(maxElements))\n",
+    "r = requests.get('https://api.github.com/repos/PhilJay/MPAndroidChart/releases?access_token=3b989e6b468c34150c3d67861693650424a4be23&page=1&per_page='+str(maxElements))\n",
     "rlist = r.json()\n",
     "rlist"
    ]
@@ -80,8 +80,7 @@
     "    \n",
     "    tag = release.get('tag_name')\n",
     "    \n",
-    "    request = requests.get('https://api.github.com/repos/PhilJay/MPAndroidChart/compare/'+tag+'...master')\n",
-    "    releaseInfo = request.json()\n",
+    "    releaseInfo = requests.get('https://api.github.com/repos/PhilJay/MPAndroidChart/compare/'+tag+'...master?access_token=3b989e6b468c34150c3d67861693650424a4be23').json()\n",
     "    \n",
     "    releaseCommits = releaseInfo.get('commits')\n",
     "    \n",
@@ -90,6 +89,7 @@
     "        author = node.get('author')\n",
     "\n",
     "        if (author is not None):\n",
+    "            print('here')\n",
     "            username = author.get('login')\n",
     "            #nodes.append(username)\n",
     "            if username in weights is not None:\n",
@@ -97,7 +97,7 @@
     "            else:\n",
     "                weights[username] = 1\n",
     "    nodesweightsrelease[tag] = weights\n",
-    "    weights.clear()\n"
+    "    weights = {}\n"
    ]
   },
   {
@@ -108,8 +108,17 @@
    },
    "outputs": [],
    "source": [
-    "nodesweightsrelease"
+    "nodesweightsrelease\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
