Token implemented - working

--- a/SDM.ipynb
+++ b/SDM.ipynb
@@ -26,7 +26,19 @@
    },
    "outputs": [],
    "source": [
-    "requestRateLimit = requests.get('https://api.github.com/rate_limit')\n",
+    "token = \"9cc36a92f33a863b5590fd9dab90f27ffa91488f\"\n",
+    "headers = {'Authorization': 'token %s' % token}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "requestRateLimit = requests.get('https://api.github.com/rate_limit', headers=headers)\n",
     "rInfo = requestRateLimit.json()\n",
     "print(rInfo)"
    ]
@@ -39,26 +51,17 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "maxElements = 100\n",
-    "r = requests.get('https://api.github.com/repos/PhilJay/MPAndroidChart/releases?access_token=3b989e6b468c34150c3d67861693650424a4be23&page=1&per_page='+str(maxElements))\n",
+    "r = requests.get('https://api.github.com/repos/PhilJay/MPAndroidChart/releases?page=1&per_page='+str(maxElements), headers=headers)\n",
     "rlist = r.json()\n",
     "rlist"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "release = rlist[1]\n",
-    "tag = release.get('tag_name')\n",
-    "request = requests.get('https://api.github.com/repos/PhilJay/MPAndroidChart/compare/'+tag+'...master')\n",
-    "releaseInfo = request.json()"
+    "##### Fetch release, users & amount of commits"
    ]
   },
   {
@@ -69,7 +72,7 @@
    },
    "outputs": [],
    "source": [
-    "\n",
+    "# Currently it needs to be changed. it is saving the same value of the weights.\n",
     "#nodes = []\n",
     "weights = {}\n",
     "\n",
@@ -80,7 +83,7 @@
     "    \n",
     "    tag = release.get('tag_name')\n",
     "    \n",
-    "    releaseInfo = requests.get('https://api.github.com/repos/PhilJay/MPAndroidChart/compare/'+tag+'...master?access_token=3b989e6b468c34150c3d67861693650424a4be23').json()\n",
+    "    releaseInfo = requests.get('https://api.github.com/repos/PhilJay/MPAndroidChart/compare/'+tag+'...master', headers=headers).json()\n",
     "    \n",
     "    releaseCommits = releaseInfo.get('commits')\n",
     "    \n",
@@ -89,7 +92,6 @@
     "        author = node.get('author')\n",
     "\n",
     "        if (author is not None):\n",
-    "            print('here')\n",
     "            username = author.get('login')\n",
     "            #nodes.append(username)\n",
     "            if username in weights is not None:\n",
@@ -97,7 +99,7 @@
     "            else:\n",
     "                weights[username] = 1\n",
     "    nodesweightsrelease[tag] = weights\n",
-    "    weights = {}\n"
+    "    \n"
    ]
   },
   {
@@ -108,7 +110,7 @@
    },
    "outputs": [],
    "source": [
-    "nodesweightsrelease\n"
+    "nodesweightsrelease"
    ]
   },
   {
