Gets the contributors, the authors, the commits, and estimate points depending on the added and removed lines in each commit.

--- a/SDM.ipynb
+++ b/SDM.ipynb
@@ -8,7 +8,8 @@
    },
    "outputs": [],
    "source": [
-    "import requests"
+    "import requests\n",
+    "from copy import deepcopy"
    ]
   },
   {
@@ -26,7 +27,11 @@
    },
    "outputs": [],
    "source": [
-    "token = \"9cc36a92f33a863b5590fd9dab90f27ffa91488f\"\n",
+    "# Generate a token from personal settings on github: https://github.com/settings/tokens\n",
+    "# Toggle on everything\n",
+    "\n",
+    "tokenSD = \"9d4c4c0ce99d4ee2d6053788912d479e2a379cc7\"\n",
+    "token = \"9d4c4c0ce99d4ee2d6053788912d479e2a379cc7\"\n",
     "headers = {'Authorization': 'token %s' % token}"
    ]
   },
@@ -73,32 +78,46 @@
    "outputs": [],
    "source": [
     "# Currently it needs to be changed. it is saving the same value of the weights.\n",
-    "#nodes = []\n",
-    "weights = {}\n",
+    "# Problem discovered: Currently it can only get 250 commits from each compare/release - meaning it will need to be increased\n",
+    "# One solution is to find the last SHA and the iterate call over all commits till the last SHA is found.\n",
+    "# http://stackoverflow.com/questions/14420076/github-v3-api-get-full-commit-list-for-large-comparison\n",
     "\n",
+    "\n",
+    "#nodes = []\n",
+    "\n",
+    "maxCommits = 10000\n",
+    "\n",
+    "weights = {}\n",
     "nodesweightsrelease = {}\n",
     "\n",
-    "for release in rlist:\n",
     "    \n",
-    "    \n",
-    "    tag = release.get('tag_name')\n",
-    "    \n",
-    "    releaseInfo = requests.get('https://api.github.com/repos/PhilJay/MPAndroidChart/compare/'+tag+'...master', headers=headers).json()\n",
-    "    \n",
-    "    releaseCommits = releaseInfo.get('commits')\n",
-    "    \n",
-    "    for node in releaseCommits:\n",
-    "        \n",
-    "        author = node.get('author')\n",
+    "tag = lastReleaseElement.get('tag_name')\n",
     "\n",
-    "        if (author is not None):\n",
-    "            username = author.get('login')\n",
-    "            #nodes.append(username)\n",
-    "            if username in weights is not None:\n",
-    "                weights[username] = weights[username]+1\n",
-    "            else:\n",
-    "                weights[username] = 1\n",
-    "    nodesweightsrelease[tag] = weights\n",
+    "releaseInfo = requests.get('https://api.github.com/repos/PhilJay/MPAndroidChart/compare/'+tag+'...master?page=1&per_page='+str(maxCommits), headers=headers).json()\n",
+    "# Data example:\n",
+    "# https://api.github.com/repos/PhilJay/MPAndroidChart/compare/v1.1.1...master\n",
+    "\n",
+    "releaseCommits = releaseInfo.get('commits')\n",
+    "\n",
+    "username = None\n",
+    "\n",
+    "for commits in releaseCommits:\n",
+    "\n",
+    "    author = commits.get('author')\n",
+    "\n",
+    "    if (author is not None):\n",
+    "        username = author.get('login')\n",
+    "        #nodes.append(username)\n",
+    "        if username in weights is not None:\n",
+    "            weights[username] = weights[username]+1\n",
+    "        else:\n",
+    "            weights[username] = 1\n",
+    "\n",
+    "\n",
+    "nodesweightsrelease[tag] = deepcopy(weights)\n",
+    "print(weights)\n",
+    "weights.clear()\n",
+    "    \n",
     "    \n"
    ]
   },
@@ -110,8 +129,95 @@
    },
    "outputs": [],
    "source": [
+    "# Currently it needs to be changed. it is saving the same value of the weights.\n",
+    "# Problem discovered: Currently it can only get 250 commits from each compare/release - meaning it will need to be increased\n",
+    "# One solution is to find the last SHA and the iterate call over all commits till the last SHA is found.\n",
+    "# http://stackoverflow.com/questions/14420076/github-v3-api-get-full-commit-list-for-large-comparison\n",
+    "\n",
+    "\n",
+    "contributorPoints = {}\n",
+    "\n",
+    "contributors = requests.get('https://api.github.com/repos/PhilJay/MPAndroidChart/stats/contributors', headers=headers).json()\n",
+    "for contributor in contributors:\n",
+    "\n",
+    "    contributorLogin = contributor.get('author').get('login')\n",
+    "    \n",
+    "    \n",
+    "    weeks = contributor.get('weeks')\n",
+    "    \n",
+    "    points = 0\n",
+    "    \n",
+    "    for week in weeks:\n",
+    "        points += week.get('a')\n",
+    "        points += week.get('d')\n",
+    "    \n",
+    "    contributorPoints[contributorLogin] = points\n",
+    "\n",
+    "\n",
+    "contributorPoints   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "contributors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "contributorLogin   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "contributors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "nodesweightsrelease"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
