fetching all projects

--- a/SDM.ipynb
+++ b/SDM.ipynb
@@ -29,9 +29,10 @@
    "source": [
     "# Generate a token from personal settings on github: https://github.com/settings/tokens\n",
     "# Toggle on everything\n",
-    "\n",
-    "tokenSD = \"9d4c4c0ce99d4ee2d6053788912d479e2a379cc7\"\n",
-    "token = \"9d4c4c0ce99d4ee2d6053788912d479e2a379cc7\"\n",
+    "ENDPOINT = \"https://api.github.com\"\n",
+    "TokenAMG = \"39733f9638f35d39e52152f2d49fd88e0c38afd7\"\n",
+    "TokenSD = \"9d4c4c0ce99d4ee2d6053788912d479e2a379cc7\"\n",
+    "token = TokenAMG\n",
     "headers = {'Authorization': 'token %s' % token}"
    ]
   },
@@ -43,7 +44,7 @@
    },
    "outputs": [],
    "source": [
-    "requestRateLimit = requests.get('https://api.github.com/rate_limit', headers=headers)\n",
+    "requestRateLimit = requests.get(ENDPOINT + '/rate_limit', headers=headers)\n",
     "rInfo = requestRateLimit.json()\n",
     "print(rInfo)"
    ]
@@ -63,29 +64,49 @@
    },
    "outputs": [],
    "source": [
+    "projects = requests.get(ENDPOINT + '/orgs/facebook/repos?page=1per_page=100', headers=headers).json()\n",
+    "print(len(projects))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "projects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "# Currently it needs to be changed. it is saving the same value of the weights.\n",
     "# Problem discovered: Currently it can only get 250 commits from each compare/release - meaning it will need to be increased\n",
     "# One solution is to find the last SHA and the iterate call over all commits till the last SHA is found.\n",
     "# http://stackoverflow.com/questions/14420076/github-v3-api-get-full-commit-list-for-large-comparison\n",
     "\n",
-    "\n",
+    "authors = {}\n",
     "contributorPoints = {}\n",
+    "for project in projects\n",
+    "    contributors = requests.get(ENDPOINT + '/repos/'+ project.get('full_name') + '/stats/contributors', headers=headers).json()\n",
+    "    for contributor in contributors:\n",
+    "        contributorLogin = contributor.get('author').get('login')\n",
+    "        weeks = contributor.get('weeks')\n",
     "\n",
-    "contributors = requests.get('https://api.github.com/repos/PhilJay/MPAndroidChart/stats/contributors', headers=headers).json()\n",
-    "for contributor in contributors:\n",
+    "        points = 0\n",
     "\n",
-    "    contributorLogin = contributor.get('author').get('login')\n",
-    "    \n",
-    "    \n",
-    "    weeks = contributor.get('weeks')\n",
-    "    \n",
-    "    points = 0\n",
-    "    \n",
-    "    for week in weeks:\n",
-    "        points += week.get('a')\n",
-    "        points += week.get('d')\n",
-    "    \n",
-    "    contributorPoints[contributorLogin] = points\n",
+    "        for week in weeks:\n",
+    "            points += week.get('a')\n",
+    "            points += week.get('d')\n",
+    "\n",
+    "        contributorPoints[contributorLogin] = points\n",
     "\n",
     "\n",
     "contributorPoints   "
