fetching all projects facebook

--- a/SDM.ipynb
+++ b/SDM.ipynb
@@ -30,8 +30,8 @@
     "# Generate a token from personal settings on github: https://github.com/settings/tokens\n",
     "# Toggle on everything\n",
     "ENDPOINT = \"https://api.github.com\"\n",
-    "TokenAMG = \"39733f9638f35d39e52152f2d49fd88e0c38afd7\"\n",
-    "TokenSD = \"9d4c4c0ce99d4ee2d6053788912d479e2a379cc7\"\n",
+    "TokenAMG = \"22f7407b4d77817f08329f8add13e2b5eb1ad7f4\"\n",
+    "#TokenSD = \"9d4c4c0ce99d4ee2d6053788912d479e2a379cc7\"\n",
     "token = TokenAMG\n",
     "headers = {'Authorization': 'token %s' % token}"
    ]
@@ -64,8 +64,15 @@
    },
    "outputs": [],
    "source": [
-    "projects = requests.get(ENDPOINT + '/orgs/facebook/repos?page=1per_page=100', headers=headers).json()\n",
-    "print(len(projects))"
+    "page = 1\n",
+    "projects = []\n",
+    "while True:\n",
+    "    temp = requests.get(ENDPOINT + '/orgs/facebook/repos?page='+str(page)+'&per_page=100', headers=headers).json()\n",
+    "    if len(temp) == 0:\n",
+    "        break\n",
+    "    projects = projects + temp\n",
+    "    page += 1\n",
+    "    print(len(temp))"
    ]
   },
   {
@@ -76,7 +83,7 @@
    },
    "outputs": [],
    "source": [
-    "projects"
+    "len(projects)"
    ]
   },
   {
@@ -94,19 +101,19 @@
     "\n",
     "authors = {}\n",
     "contributorPoints = {}\n",
-    "for project in projects\n",
+    "for project in projects:\n",
     "    contributors = requests.get(ENDPOINT + '/repos/'+ project.get('full_name') + '/stats/contributors', headers=headers).json()\n",
     "    for contributor in contributors:\n",
-    "        contributorLogin = contributor.get('author').get('login')\n",
+    "        username = contributor.get('author').get('login')\n",
     "        weeks = contributor.get('weeks')\n",
-    "\n",
     "        points = 0\n",
-    "\n",
     "        for week in weeks:\n",
     "            points += week.get('a')\n",
     "            points += week.get('d')\n",
-    "\n",
-    "        contributorPoints[contributorLogin] = points\n",
+    "        if username in authors is not None:\n",
+    "            authors[username].append({\"project\": project.get('name'), \"value\": points})\n",
+    "        else:\n",
+    "            authors[username] = [{\"project\": project.get('name'), \"value\": points}]\n",
     "\n",
     "\n",
     "contributorPoints   "
@@ -120,7 +127,7 @@
    },
    "outputs": [],
    "source": [
-    "contributors"
+    "len(authors)"
    ]
   },
   {
