--- a/NetworkX.ipynb
+++ b/NetworkX.ipynb
@@ -8,7 +8,8 @@
    },
    "outputs": [],
    "source": [
-    "import networkx as nx"
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -19,8 +20,17 @@
    },
    "outputs": [],
    "source": [
-    "gn = nx.Graph()"
+    "bus_graph = nx.Graph()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
