--- a/NetworkX.ipynb
+++ b/NetworkX.ipynb
@@ -9,7 +9,8 @@
    "outputs": [],
    "source": [
     "import networkx as nx\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import pprint"
    ]
   },
   {
@@ -20,7 +21,182 @@
    },
    "outputs": [],
    "source": [
-    "bus_graph = nx.Graph()"
+    "gn = nx.Graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%run SDM.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "len(totalProjects)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "totalProjects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "max = 0\n",
+    "min = 1000000\n",
+    "alpha = 0.45\n",
+    "for author, value in authors.items():\n",
+    "    author_weight = 0\n",
+    "    degree = len(value)\n",
+    "    for project in value:\n",
+    "        author_weight=author_weight + project.get('value')\n",
+    "    balance = pow(degree, (1-alpha))*pow(author_weight, alpha)\n",
+    "    if balance > max:\n",
+    "        max = balance\n",
+    "    if balance < min:\n",
+    "        min = balance\n",
+    "    if balance == 0:\n",
+    "        print(author)\n",
+    "print(min)\n",
+    "print(max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for pro in projects:\n",
+    "    print(pro.get('name'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "color_map = []\n",
+    "alpha = 0.45\n",
+    "total = 0\n",
+    "for project in projects:\n",
+    "    gn.add_node(project.get('name'), color='red', style='project')\n",
+    "    color_map.append('red')\n",
+    "for author, value in authors.items():\n",
+    "    degree = len(value)\n",
+    "    author_weight = 0\n",
+    "    for project in value:\n",
+    "        author_weight=author_weight + project.get('value')\n",
+    "    balance = pow(degree, (1-alpha))*pow(author_weight, alpha)\n",
+    "    gn.add_node(author,color='blue',style='author', balance=((balance - min)/(max - min)))\n",
+    "    color_map.append('blue')\n",
+    "    for project in value:\n",
+    "        weight=(project.get('value') - min)/(max-min)\n",
+    "        gn.add_edge(author, project.get('project'), weight=weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "nx.density(gn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "len(gn.nodes())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "len(gn.edges())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "nx.draw(gn,node_color = color_map)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "nx.write_graphml(gn,'scm.graphml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "gn.nodes()"
    ]
   },
   {
@@ -36,9 +212,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
