--- a/SDM.ipynb
+++ b/SDM.ipynb
@@ -65,14 +65,7 @@
    "outputs": [],
    "source": [
     "page = 1\n",
-    "projects = []\n",
-    "while True:\n",
-    "    temp = requests.get(ENDPOINT + '/orgs/facebook/repos?page='+str(page)+'&per_page=100', headers=headers).json()\n",
-    "    if len(temp) == 0:\n",
-    "        break\n",
-    "    projects = projects + temp\n",
-    "    page += 1\n",
-    "    print(len(temp))"
+    "projects = requests.get(ENDPOINT + '/orgs/facebook/repos?page='+str(page)+'&per_page=10', headers=headers).json()"
    ]
   },
   {
@@ -100,9 +93,54 @@
     "# http://stackoverflow.com/questions/14420076/github-v3-api-get-full-commit-list-for-large-comparison\n",
     "\n",
     "authors = {}\n",
-    "totalProjects = {}\n",
+    "max = 0\n",
+    "min = 100000\n",
+    "projects = [\n",
+    "   {\n",
+    "      \"full_name\": \"facebook/react\",\n",
+    "      \"name\": \"react\"\n",
+    "    },\n",
+    "    {\n",
+    "      \"full_name\": \"facebook/fresco\",\n",
+    "      \"name\": \"fresco\"\n",
+    "    },\n",
+    "    {\n",
+    "      \"full_name\": \"facebook/hhvm\",\n",
+    "      \"name\": \"hhvm\"\n",
+    "    },\n",
+    "    {\n",
+    "      \"full_name\": \"facebook/codemod\",\n",
+    "      \"name\": \"codemod\"\n",
+    "    },\n",
+    "    {\n",
+    "      \"full_name\": \"facebook/relay\",\n",
+    "      \"name\": \"relay\"\n",
+    "    },\n",
+    "    {\n",
+    "      \"full_name\": \"facebook/jest\",\n",
+    "      \"name\": \"jest\"\n",
+    "    },\n",
+    "    {\n",
+    "      \"full_name\": \"facebook/buck\",\n",
+    "      \"name\": \"buck\"\n",
+    "    },\n",
+    "    {\n",
+    "      \"full_name\": \"facebook/xctool\",\n",
+    "      \"name\": \"xctool\"\n",
+    "    },\n",
+    "    {\n",
+    "      \"full_name\": \"facebook/ios-snapshot-test-case\",\n",
+    "      \"name\": \"ios-snapshot-test-case\"\n",
+    "    },\n",
+    "    {\n",
+    "      \"full_name\": \"facebook/react-devtools\",\n",
+    "      \"name\": \"react-devtools\"\n",
+    "    }\n",
+    "]\n",
     "for project in projects:\n",
+    "    page = 1\n",
     "    contributors = requests.get(ENDPOINT + '/repos/'+ project.get('full_name') + '/stats/contributors', headers=headers).json()\n",
+    "    print(len(contributors))\n",
     "    for contributor in contributors:\n",
     "        username = contributor.get('author').get('login')\n",
     "        weeks = contributor.get('weeks')\n",
@@ -114,12 +152,10 @@
     "            authors[username].append({\"project\": project.get('name'), \"value\": points})\n",
     "        else:\n",
     "            authors[username] = [{\"project\": project.get('name'), \"value\": points}]\n",
-    "        name = project.get('name')\n",
-    "        if name in totalProjects and points > totalProjects[name]:\n",
-    "            totalProjects[name] = points\n",
-    "        else:\n",
-    "            totalProjects[name] = points\n",
-    " "
+    "        if points > max:\n",
+    "            max = points\n",
+    "        if points < min:\n",
+    "            min = points\n"
    ]
   },
   {
