--- a/NetworkX.ipynb
+++ b/NetworkX.ipynb
@@ -70,19 +70,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "max = 0\n",
     "min = 1000000\n",
     "alpha = 0.45\n",
+    "total2 = 0\n",
     "for author, value in authors.items():\n",
     "    author_weight = 0\n",
     "    degree = len(value)\n",
     "    for project in value:\n",
     "        author_weight=author_weight + project.get('value')\n",
     "    balance = pow(degree, (1-alpha))*pow(author_weight, alpha)\n",
+    "    total2 = total2 + balance\n",
     "    if balance > max:\n",
     "        max = balance\n",
     "    if balance < min:\n",
@@ -90,7 +93,8 @@
     "    if balance == 0:\n",
     "        print(author)\n",
     "print(min)\n",
-    "print(max)"
+    "print(max)\n",
+    "print(total)"
    ]
   },
   {
@@ -101,21 +105,22 @@
    },
    "outputs": [],
    "source": [
-    "for pro in projects:\n",
-    "    print(pro.get('name'))"
+    "total2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "color_map = []\n",
-    "alpha = 0.45\n",
+    "alpha = 0.41\n",
     "total = 0\n",
+    "bal = []\n",
     "for project in projects:\n",
     "    gn.add_node(project.get('name'), color='red', style='project')\n",
     "    color_map.append('red')\n",
@@ -125,7 +130,9 @@
     "    for project in value:\n",
     "        author_weight=author_weight + project.get('value')\n",
     "    balance = pow(degree, (1-alpha))*pow(author_weight, alpha)\n",
-    "    gn.add_node(author,color='blue',style='author', balance=((balance - min)/(max - min)))\n",
+    "    gn.add_node(author,color='blue',style='author', balance=(balance/total2))\n",
+    "    bal2 = (balance/total2)\n",
+    "    bal.append(bal2)\n",
     "    color_map.append('blue')\n",
     "    for project in value:\n",
     "        weight=(project.get('value') - min)/(max-min)\n",
@@ -140,7 +147,7 @@
    },
    "outputs": [],
    "source": [
-    "nx.density(gn)"
+    "nx.degree_centrality(gn)"
    ]
   },
   {
@@ -151,7 +158,11 @@
    },
    "outputs": [],
    "source": [
-    "len(gn.nodes())"
+    "a = nx.degree_centrality(gn)\n",
+    "b = 0\n",
+    "for project in projects:\n",
+    "    print(a[project.get('name')])\n",
+    "    b = b + a[project.get('name')]"
    ]
   },
   {
@@ -162,7 +173,61 @@
    },
    "outputs": [],
    "source": [
-    "len(gn.edges())"
+    "bal.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "truckFactor = 1\n",
+    "while(sum(bal) >= 0.5):\n",
+    "    bal.pop()\n",
+    "    truckFactor = truckFactor + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "truckFactor"
    ]
   },
   {
@@ -175,6 +240,17 @@
    "source": [
     "nx.draw(gn,node_color = color_map)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "nx.density(gn)"
    ]
   },
   {
