--- a/SDM.ipynb
+++ b/SDM.ipynb
@@ -30,7 +30,7 @@
     "# Generate a token from personal settings on github: https://github.com/settings/tokens\n",
     "# Toggle on everything\n",
     "ENDPOINT = \"https://api.github.com\"\n",
-    "TokenAMG = \"\"\n",
+    "TokenAMG = \"10d56412a0af61cd5ff9bf936a66cd908c408bff\"\n",
     "#TokenSD = \"9d4c4c0ce99d4ee2d6053788912d479e2a379cc7\"\n",
     "token = TokenAMG\n",
     "headers = {'Authorization': 'token %s' % token}"
@@ -119,10 +119,6 @@
     "    {\n",
     "      \"full_name\": \"facebook/jest\",\n",
     "      \"name\": \"jest\"\n",
-    "    },\n",
-    "    {\n",
-    "      \"full_name\": \"facebook/buck\",\n",
-    "      \"name\": \"buck\"\n",
     "    },\n",
     "    {\n",
     "      \"full_name\": \"facebook/xctool\",\n",
